--- a/template.tex
+++ b/template.tex
@@ -149,7 +149,7 @@ $else$
 }
 $endif$
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
-\def\tightlist{}  % BUG FIX http://tex.stackexchange.com/a/258486
+\providecommand{\tightlist}{}
 $if(numbersections)$
 \setcounter{secnumdepth}{5}
 $else$
