--- a/content/2017-09-08-hiring.md
+++ b/content/2017-09-08-hiring.md
@@ -1,11 +1,15 @@
 title: Hiring a scientific developer
 tags: neuroscience
 
-We're looking for an outstanding scientific developer to help us develop data sharing platforms and software for neuroscience data. This is a large collaboration between ~50 neuroscientists from 20 labs around the world.
+We're looking for an outstanding Python programmer to help us develop data sharing platforms and software for neuroscience data. This is a large collaboration between ~50 neuroscientists from 20 labs around the world.
 
-Required skills: scientific Python/NumPy, MATLAB, parallel computing, django, SQL, Unix, networks... Experience with git, GitHub, unit testing and any other types of testing, linting, documentation, code coverage, continuous integration... A strong background in mathematics is a plus.
+<!-- PELICAN_END_SUMMARY -->
 
-Location: mainly London, Paris, Lisbon, New York, or possibly remote.
+Required skills: Django, Django REST framework, PostgreSQL, MySQL, front-end web development, sysadmin.
+
+Optional: scientific Python (NumPy), MATLAB, distributed computing.
+
+Location: mainly London, Paris, Lisbon, New York, remote negotiable.
 
 Positions to fill as soon as possible.
 
