--- a/content/2023-05-16-sbsbook.md
+++ b/content/2023-05-16-sbsbook.md
@@ -1,7 +1,7 @@
 title: New book on the scientific controversy surounding Shaken Baby Syndrome
 tags: sbs
 
-I'm delighted to present the book I've been working on for the past few years with several colleagues, which is just being published by **Cambridge University Press**: [**Shaken Baby Syndrome: Investigating the Abusive Head Trauma Controversy**](https://www.cambridge.org/core/books/shaken-baby-syndrome/67016F1A1F6ED92141A179E9A5D145FB).
+I'm delighted to present the book I've been working on for the past few years with several colleagues, which is just being published by **Cambridge University Press**: [**Shaken Baby Syndrome: Investigating the Abusive Head Trauma Controversy**](https://shakenbaby.science).
 
 [![](https://repository-images.githubusercontent.com/592065503/0028eb78-1fac-4b2f-8651-9a153ad35e1c)]({filename}2023-05-16-sbsbook.md)
 
