Update SBS book image

--- a/content/2023-05-16-sbsbook.md
+++ b/content/2023-05-16-sbsbook.md
@@ -3,11 +3,11 @@ tags: sbs
 
 I'm delighted to present the book I've been working on for the past few years with several colleagues, which is just being published by **Cambridge University Press**: [**Shaken Baby Syndrome: Investigating the Abusive Head Trauma Controversy**](https://shakenbaby.science).
 
-[![](https://repository-images.githubusercontent.com/592065503/0028eb78-1fac-4b2f-8651-9a153ad35e1c)]({filename}2023-05-16-sbsbook.md)
+[![](https://raw.githubusercontent.com/sbs-book/sbs-book.github.io/d59f01a0a5b945a61388484329abb80ec2e5919c/resources/social-media-2560.jpg)]({filename}2023-05-16-sbsbook.md)
 
 <!-- PELICAN_END_SUMMARY -->
 
-This is an academic, collaborative, multidisciplinary book exploring the [**scientific controversy surrounding Shaken Baby Syndrome (SBS)**](), also known as Abusive Head Trauma (AHT).
+This is an academic, collaborative, multidisciplinary book exploring the [**scientific controversy surrounding Shaken Baby Syndrome (SBS)**](/introduction-shaken-baby-syndrome-controversy/), also known as Abusive Head Trauma (AHT).
 
 Thirty-two experts from 16 disciplines across 8 countries address various medical, scientific, and legal aspects of this contentious subject. While the existence and severity of abusive head injuries are not in doubt, the debate revolves around the **scientific and forensic reliability of medical determinations of violent shaking**, when they rely solely on unexplained isolated intracranial findings.
 
