Add link to blog post

--- a/content/2023-05-16-sbsbook.md
+++ b/content/2023-05-16-sbsbook.md
@@ -20,6 +20,7 @@ This book will be of interest to all **professionals** involved in these cases: 
 Useful links:
 
 * [**Book webpage**](https://shakenbaby.science/)
+* [**Blog post**](https://www.cambridgeblog.org/2023/05/a-journey-into-the-shaken-baby-syndrome-abusive-head-trauma-controversy/): A journey into the shaken baby syndrome/abusive head trauma controversy
 * [**Cambridge University Press**](https://www.cambridge.org/core/books/shaken-baby-syndrome/67016F1A1F6ED92141A179E9A5D145FB)
 * [**GitHub repository**](https://github.com/sbs-book/sbs-book.github.io)
 * [**Cyrille Rossant's Introduction to the Scientific Controversy over Shaken Baby Syndrome**](/introduction-shaken-baby-syndrome-controversy/)
