--- a/content/2023-05-16-sbsbook.md
+++ b/content/2023-05-16-sbsbook.md
@@ -1,4 +1,4 @@
-title: New book on the scientific controversy surounding Shaken Baby Syndrome
+title: New book on the scientific controversy surrounding Shaken Baby Syndrome
 tags: sbs
 
 I'm delighted to present the book I've been working on for the past few years with several colleagues, which is just being published by **Cambridge University Press**: [**Shaken Baby Syndrome: Investigating the Abusive Head Trauma Controversy**](https://shakenbaby.science).
