--- a/content/2024-03-14-pykidos.md
+++ b/content/2024-03-14-pykidos.md
@@ -47,3 +47,4 @@ PyKidos is still quite rough around the edges since I primarily built it for my 
 
 * [PyKidos](https://pykidos.github.io/)
 * [GitHub repository](https://github.com/pykidos/pykidos.github.io)
+* [Hacker news discussion](https://news.ycombinator.com/item?id=39704712) (132 points, 57 comments)
